# nova-app

./: .gitignore  CLAUDE.md  CUsersdevdanova_db_copy.db  README.md  build.gradle.kts  build_apk.bat  build_log.txt  build_output.txt  build_output2.txt  build_output3.txt  build_output4.txt  build_output5.txt  build_output6.txt  do_build.bat  run_build.bat  settings.gradle.kts  setup.bat  setup_llama.bat  setup_llama.sh  setup_voice.sh
.claude/: settings.local.json
app/: build.gradle.kts  proguard-rules.pro
app/objectbox-models/: default.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Hey-Nova_en_android_v4_0_0.ppn
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  piper_jni.cpp  whisper_jni.cpp
app/src/main/java/ai/mlc/mlcllm/: JSONFFIEngine.java
app/src/main/java/com/nova/companion/: MainActivity.kt  NovaApp.kt
app/src/main/java/com/nova/companion/accessibility/: AccessibilityPermissionHelper.kt  GestureExecutor.kt  NodeFinder.kt  NovaAccessibilityService.kt  ScreenContext.kt  ScreenReader.kt  UIAutomator.kt
app/src/main/java/com/nova/companion/agent/: AgentAction.kt  AgentExecutor.kt
app/src/main/java/com/nova/companion/biohack/: AcousticEntrainmentEngine.kt  GodModeScreen.kt  RetinalStrobeService.kt  VagusStimulator.kt
app/src/main/java/com/nova/companion/biohack/audio/: NeuroAudioService.kt
app/src/main/java/com/nova/companion/biohack/hypnosis/: HypnosisAudioEngine.kt  HypnosisHapticEngine.kt  HypnosisProtocols.kt  HypnosisScreen.kt  HypnosisSessionOrchestrator.kt  HypnosisViewModel.kt  HypnosisVisuals.kt  HypnosisVoiceEngine.kt  SubliminalStrobeService.kt
app/src/main/java/com/nova/companion/brain/: NovaPersonality.kt
app/src/main/java/com/nova/companion/brain/context/: ContextEngine.kt  ContextInjector.kt  ContextSnapshot.kt
app/src/main/java/com/nova/companion/brain/emotion/: NovaEmotionEngine.kt
app/src/main/java/com/nova/companion/brain/memory/: BrainMemoryManager.kt  NovaMemoryDatabase.kt
app/src/main/java/com/nova/companion/brain/proactive/: ContextTimeline.kt  ProactiveActionDispatcher.kt  ProactiveEngine.kt  ProactiveInferenceEngine.kt  ProactiveMessage.kt
app/src/main/java/com/nova/companion/brain/thinking/: AutonomousActionExecutor.kt  NovaThinkingLoop.kt  ThinkingWorker.kt
app/src/main/java/com/nova/companion/cloud/: CloudBridge.kt  CloudConfig.kt  CloudLLMService.kt  ElevenLabsTTS.kt  OpenAIClient.kt  SmartRouter.kt  VoiceMode.kt
app/src/main/java/com/nova/companion/core/: NovaRouter.kt  SystemPrompt.kt
app/src/main/java/com/nova/companion/data/: MessageDao.kt  MessageEntity.kt  NovaDatabase.kt
app/src/main/java/com/nova/companion/data/dao/: ContactAliasDao.kt  ConversationDao.kt  DailySummaryDao.kt  ExpenseDao.kt  FitnessDao.kt  KnowledgeGraphDao.kt  LearnedRoutineDao.kt  MemoryDao.kt  SmartRoutineDao.kt  TaskDao.kt  UserFactDao.kt  UserProfileDao.kt
app/src/main/java/com/nova/companion/data/entity/: ContactAlias.kt  Conversation.kt  DailySummary.kt  Expense.kt  FitnessLog.kt  GraphEdge.kt  GraphNode.kt  LearnedRoutine.kt  Memory.kt  NovaTask.kt  SmartRoutine.kt  UserFact.kt  UserProfile.kt
app/src/main/java/com/nova/companion/inference/: HybridInferenceRouter.kt  InferenceRouter.kt  LlamaJNI.kt  LocalInferenceClient.kt  NovaInference.kt  OfflineCapabilityManager.kt
app/src/main/java/com/nova/companion/memory/: EmbeddingBackfillWorker.kt  GraphTripletExtractor.kt  KnowledgeGraphRepository.kt  MemoryManager.kt  SemanticSearch.kt
app/src/main/java/com/nova/companion/negotiation/: DynamicApiDispatcher.kt  ExternalApiRegistry.kt  ExternalApiSpec.kt  MasterPlanner.kt  NegotiationEngine.kt  NegotiationToolExecutors.kt  WebScraperTool.kt
app/src/main/java/com/nova/companion/notification/: BootReceiver.kt  NotificationScheduler.kt  NovaMessages.kt  NovaNotificationHelper.kt  NovaNotificationPrefs.kt  NovaWorker.kt  ProactiveWorker.kt  ReminderReceiver.kt
app/src/main/java/com/nova/companion/overlay/: AuraOverlayService.kt  DynamicIslandContent.kt
app/src/main/java/com/nova/companion/proactive/: ProactiveCheckWorker.kt  ProactiveNotificationHelper.kt
app/src/main/java/com/nova/companion/routines/: RecordedStep.kt  RoutinePlayer.kt  RoutineRecorder.kt
app/src/main/java/com/nova/companion/services/: NovaNotificationListener.kt
app/src/main/java/com/nova/companion/tools/: ContactLookupHelper.kt  MediaControlTool.kt  NavigateTool.kt  NovaToolRegistry.kt  OpenAppTool.kt  PhoneSettingsTool.kt  ReminderWorker.kt  SendMessageTool.kt  SetAlarmTool.kt  SetReminderTool.kt  ToolPermissionHelper.kt  ToolRegistry.kt  WebSearchTool.kt
app/src/main/java/com/nova/companion/ui/: EdgeLightEffect.kt  MemoryDebugScreen.kt  NovaTestScreen.kt  NovaViewModel.kt  VoiceComponents.kt
app/src/main/java/com/nova/companion/vision/: BitmapEncoder.kt  ScreenshotService.kt  VisionPrompts.kt
app/src/main/java/com/nova/companion/voice/: AudioRecorder.kt  DeepgramSTT.kt  ElevenLabsTTS.kt  ElevenLabsVoiceService.kt  NovaVoicePipeline.kt  OfflineSTT.kt  OfflineTTS.kt  PiperJNI.kt  PiperTTS.kt  VoiceManager.kt  WakeWordService.kt  WhisperJNI.kt  WhisperSTT.kt
app/src/main/java/com/nova/companion/widget/: NovaWidget.kt  NovaWidgetReceiver.kt
app/src/main/java/com/nova/companion/workflows/: WorkflowExecutor.kt  WorkflowMatcher.kt  WorkflowRegistry.kt  WorkflowTemplate.kt
app/src/main/java/org/apache/tvm/: Device.java  Function.java  Module.java  TVMValue.java
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_nova_notification.xml
app/src/main/res/layout/: widget_loading.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: nova_accessibility_config.xml  nova_widget_info.xml
app/src/test/java/com/nova/companion/core/: NovaRouterTest.kt
docs/: ARCHITECTURE.md  TRAINING.md  VOICE_SETUP.md  nova-knowledge-base.md  nova-routines.md
src/app/: capacitor.config.json  index.html  package-lock.json  package.json
src/app/android/app/: build.gradle
src/app/android/app/src/main/res/values/: strings.xml
(+98 files in other folders)
